--- a/back-end/phase4/src/main/resources/application.properties
+++ b/back-end/phase4/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url= jdbc:postgresql://localhost:5433/test
 spring.datasource.username= postgres
 spring.datasource.password= 610431
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.cors.allowed-origins=http://localhost:3000
